--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "build": "pnpm install && echo 'Dependencies installed'"
   },
   "keywords": [],
   "author": "",
@@ -18,3 +20,4 @@
     "express": "^5.1.0"
   }
 }
+2
