udated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,11 @@ anyio
 # Environment management
 python-dotenv
 
+google-auth-oauthlib>=1.2.0
+google-auth>=2.30.0
+google-api-python-client>=2.139.0
+google-auth-httplib2>=0.2.0
+
 # HTTP requests
 requests
 httpx  # optional, but nice if you later swap from requests
