--- a/requirements.txt
+++ b/requirements.txt
@@ -17,12 +17,12 @@ google-auth-httplib2>=0.2.0
 requests
 httpx  # optional, but nice if you later swap from requests
 
-# LlamaIndex core + OpenAI integration
-llama-index
-llama-index-llms-openai
+# Compatible versions
+openai==1.109.1
+llama-index==0.14.3
+llama-index-core==0.13.0
+llama-index-llms-openai==0.5.1
 
-# OpenAI official SDK
-openai
 
 # Token counting
 tiktoken
